chore: reorganize table stories

--- a/packages/core/src/Table/stories/TableComplete/TableComplete.stories.mdx
+++ b/packages/core/src/Table/stories/TableComplete/TableComplete.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { CompleteStory } from "./TableSamples";
+import { CompleteStory } from "./TableCompleteSamples";
 
 <Meta title="Visualizations/Table/Complete Table" />
 
