docs(Table): reorganize files

--- a/packages/core/src/Table/stories/TableSection/TableSection.stories.mdx
+++ b/packages/core/src/Table/stories/TableSection/TableSection.stories.mdx
@@ -3,7 +3,7 @@ import {
   SimpleTableSectionStory,
   CompleteTableSectionStory,
   PropsTableSectionStory,
-} from "./TableSectionStories";
+} from "./TableSectionSamples";
 
 <Meta title="Visualizations/Table/Table Section" />
 
