docs(storybook): move to .mdx files
- `.stories.mdx` is deprecated and will be removed in v8

--- a/docs/foundation/Icons/Library.mdx
+++ b/docs/foundation/Icons/Library.mdx
@@ -1,9 +1,9 @@
-import { Meta, Title, Unstyled } from "@storybook/addon-docs";
+import { Meta, Unstyled } from "@storybook/addon-docs";
 import IconLibrary from "./Library";
 
 <Meta title="Foundation/Icons/Library" />
 
-<Title>Icon Library</Title>
+# Icon Library
 
 <Unstyled>
   <IconLibrary />
